readable: fix navbar active style

--- a/readable/bootstrap.css
+++ b/readable/bootstrap.css
@@ -6577,7 +6577,7 @@ button.close {
 .navbar-nav > li > a:hover {
   border: 1px solid #ddd;
 }
-p .navbar-nav > .active > a,
+.navbar-nav > .active > a,
 .navbar-nav > .active > a:hover {
   border: 1px solid #ddd;
 }
